--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -40,3 +40,14 @@
     height: 80px;
     font-size: 50px
 }
+
+nav a{
+    text-decoration: none;
+    color: white !important;
+    padding: auto;
+    margin: auto;
+}
+
+nav a:hover{
+    color: darkgrey !important;
+}
